eda ontology cu bi nham xiu

--- a/src/tungvmh/EDA.ipynb
+++ b/src/tungvmh/EDA.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9ca97ab7",
    "metadata": {},
    "outputs": [
@@ -44,8 +44,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Libraries imported successfully!\n",
-      "📁 Data directory: /home/hoangtungvum/Data/ML_UET/CAFA-6-Protein-Function-Prediction-Kaggle/data\n"
+      "Libraries imported successfully!\n",
+      "Data directory: /home/hoangtungvum/Data/ML_UET/CAFA-6-Protein-Function-Prediction-Kaggle/data\n"
      ]
     }
    ],
@@ -56,7 +56,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from collections import Counter, defaultdict\n",
+    "from collections import Counter\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
@@ -196,10 +196,10 @@
       "Loaded 82,404 training sequences\n",
       "Loaded 82,404 training sequences\n",
       "Loaded 224,309 test sequences\n",
-      "Loaded 224,309 test sequences\n",
       "Loaded 537,028 training annotations\n",
       "Loaded taxonomy for 82,404 proteins\n",
       "Loaded IA weights for 40,122 GO terms\n",
+      "Loaded 224,309 test sequences\n",
       "Loaded 537,028 training annotations\n",
       "Loaded taxonomy for 82,404 proteins\n",
       "Loaded IA weights for 40,122 GO terms\n",
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "89f6d516",
    "metadata": {},
    "outputs": [
@@ -443,6 +443,8 @@
       "\n",
       "Unique ontology values: ['C' 'F' 'P']\n",
       "\n",
+      "Mapped ontology values: ['CCO' 'MFO' 'BPO']\n",
+      "\n",
       "Mapped ontology values: ['CCO' 'MFO' 'BPO']\n"
      ]
     }
@@ -451,7 +453,7 @@
     "# Reload with correct handling - file has header\n",
     "train_terms = pd.read_csv(os.path.join(TRAIN_DIR, \"train_terms.tsv\"), sep='\\t')\n",
     "train_terms.columns = ['protein_id', 'go_term', 'ontology']\n",
-    "priPnt(f\"✅ Reloaded {len(train_terms):,} training annotations\")\n",
+    "print(f\"✅ Reloaded {len(train_terms):,} training annotations\")\n",
     "print(\"\\nFirst few rows:\")\n",
     "print(train_terms.head(10))\n",
     "print(\"\\nUnique ontology values:\", train_terms['ontology'].unique())\n",
@@ -472,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "8ee9014a",
    "metadata": {},
    "outputs": [
@@ -549,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "b6785c4e",
    "metadata": {},
    "outputs": [
@@ -569,8 +571,8 @@
      "text": [
       "\n",
       "🔬 Unusual Characters in Sequences:\n",
-      "Training set unusual characters: {'X', 'B', 'U'}\n",
-      "Test set unusual characters: {'X', 'B', 'U', 'Z'}\n"
+      "Training set unusual characters: {'B', 'U', 'X'}\n",
+      "Test set unusual characters: {'B', 'U', 'Z', 'X'}\n"
      ]
     }
    ],
@@ -633,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "180361d4",
    "metadata": {},
    "outputs": [
@@ -702,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "9c70bcf3",
    "metadata": {},
    "outputs": [
@@ -775,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "b746d162",
    "metadata": {},
    "outputs": [
@@ -858,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "521f50a8",
    "metadata": {},
    "outputs": [
@@ -946,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "7726c9a6",
    "metadata": {},
    "outputs": [
@@ -1030,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "51486c9f",
    "metadata": {},
    "outputs": [
@@ -1047,6 +1049,11 @@
       "------------------------------------------------------------\n",
       "Subontology               Root Node        Total Terms\n",
       "------------------------------------------------------------\n",
+      "biological_process        GO:0008150            25,949\n",
+      "cellular_component        GO:0005575             4,040\n",
+      "molecular_function        GO:0003674            10,130\n",
+      "\n",
+      "📊 GO Graph Depth Analysis:\n",
       "biological_process        GO:0008150            25,949\n",
       "cellular_component        GO:0005575             4,040\n",
       "molecular_function        GO:0003674            10,130\n",
@@ -1124,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "e70a8ca0",
    "metadata": {},
    "outputs": [
@@ -1209,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "826dceba",
    "metadata": {},
    "outputs": [
@@ -1295,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "e4b3f7fc",
    "metadata": {},
    "outputs": [
@@ -1378,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "4af7de8d",
    "metadata": {},
    "outputs": [
@@ -1615,7 +1622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "ca1b2497",
    "metadata": {},
    "outputs": [
@@ -1635,6 +1642,17 @@
       "\n",
       "🧬 PROTEIN SEQUENCES:\n",
       "  • Average length (train): 525.8 amino acids\n",
+      "  • Average length (test): 429.2 amino acids\n",
+      "  • Length range: 2 - 35,213\n",
+      "\n",
+      "🏷️ MULTI-LABEL CHARACTERISTICS:\n",
+      "  • Average labels per protein: 6.52\n",
+      "  • Proteins with single label: 15,237\n",
+      "  • Max labels on single protein: 233\n",
+      "\n",
+      "📈 ONTOLOGY DISTRIBUTION:\n",
+      "  • Biological Process: 250,805 annotations (46.7%), 16,858 unique terms\n",
+      "  • Cellular Component: 157,770 annotations (29.4%), 2,651 unique terms\n",
       "  • Average length (test): 429.2 amino acids\n",
       "  • Length range: 2 - 35,213\n",
       "\n",
@@ -1672,7 +1690,6 @@
       "  4. Leverage protein sequence embeddings (ESM, ProtBERT)\n",
       "  5. Cross-validate on species to estimate generalization\n",
       "  6. Optimize for weighted F1-measure (using IA weights)\n",
-      "  • Cellular Component: 157,770 annotations (29.4%), 2,651 unique terms\n",
       "  • Molecular Function: 128,452 annotations (23.9%), 6,616 unique terms\n",
       "\n",
       "⚖️ CLASS IMBALANCE:\n",
@@ -1759,7 +1776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "id": "8e8ab361",
    "metadata": {},
    "outputs": [
