--- a/src/tungvmh/EDA.ipynb
+++ b/src/tungvmh/EDA.ipynb
@@ -1893,7 +1893,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cafa-6-protein-function-prediction-kaggle",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
