--- a/src/tungvmh/verify_label_embedding.ipynb
+++ b/src/tungvmh/verify_label_embedding.ipynb
@@ -110,46 +110,46 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>GO:0000001</td>\n",
-       "      <td>[-0.9518631, 0.0803124, 0.4292605, 0.13440354,...</td>\n",
+       "      <th>19995</th>\n",
+       "      <td>19995</td>\n",
+       "      <td>GO:2001303</td>\n",
+       "      <td>[-0.00035673208, 0.67592674, 0.039151926, -0.1...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>GO:0000002</td>\n",
-       "      <td>[-0.70065135, -0.047753025, 0.8565155, -0.1312...</td>\n",
+       "      <th>19996</th>\n",
+       "      <td>19996</td>\n",
+       "      <td>GO:2001307</td>\n",
+       "      <td>[-0.6064583, 1.211026, 0.10974569, -0.19711222...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>GO:0000006</td>\n",
-       "      <td>[-0.25982004, -0.37692344, 0.076045305, 0.8337...</td>\n",
+       "      <th>19997</th>\n",
+       "      <td>19997</td>\n",
+       "      <td>GO:2001310</td>\n",
+       "      <td>[-0.4033451, 0.45717975, 0.45919684, -0.333266...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>GO:0000009</td>\n",
-       "      <td>[-0.19106326, -0.4243139, -0.8747841, -0.19341...</td>\n",
+       "      <th>19998</th>\n",
+       "      <td>19998</td>\n",
+       "      <td>GO:2001311</td>\n",
+       "      <td>[0.46174765, -0.14555496, -0.17262812, 0.29604...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>GO:0000011</td>\n",
-       "      <td>[-0.53705364, 0.39702752, -0.025368618, -0.422...</td>\n",
+       "      <th>19999</th>\n",
+       "      <td>19999</td>\n",
+       "      <td>GO:2001317</td>\n",
+       "      <td>[-0.18756926, 0.5853828, -0.095721684, 0.00241...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   id        name                                          embedding\n",
-       "0   0  GO:0000001  [-0.9518631, 0.0803124, 0.4292605, 0.13440354,...\n",
-       "1   1  GO:0000002  [-0.70065135, -0.047753025, 0.8565155, -0.1312...\n",
-       "2   2  GO:0000006  [-0.25982004, -0.37692344, 0.076045305, 0.8337...\n",
-       "3   3  GO:0000009  [-0.19106326, -0.4243139, -0.8747841, -0.19341...\n",
-       "4   4  GO:0000011  [-0.53705364, 0.39702752, -0.025368618, -0.422..."
+       "          id        name                                          embedding\n",
+       "19995  19995  GO:2001303  [-0.00035673208, 0.67592674, 0.039151926, -0.1...\n",
+       "19996  19996  GO:2001307  [-0.6064583, 1.211026, 0.10974569, -0.19711222...\n",
+       "19997  19997  GO:2001310  [-0.4033451, 0.45717975, 0.45919684, -0.333266...\n",
+       "19998  19998  GO:2001311  [0.46174765, -0.14555496, -0.17262812, 0.29604...\n",
+       "19999  19999  GO:2001317  [-0.18756926, 0.5853828, -0.095721684, 0.00241..."
       ]
      },
      "metadata": {},
@@ -160,7 +160,7 @@
     "if 'df' in locals():\n",
     "    print(\"Columns:\", df.columns)\n",
     "    print(\"\\nFirst 5 rows:\")\n",
-    "    display(df.head())"
+    "    display(df.tail())"
    ]
   },
   {
@@ -238,7 +238,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "cafa-6-protein-function-prediction-kaggle",
    "language": "python",
    "name": "python3"
   },
