--- a/src/tungvmh/verify_label_embedding.ipynb
+++ b/src/tungvmh/verify_label_embedding.ipynb
@@ -238,7 +238,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cafa-6-protein-function-prediction-kaggle",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -252,7 +252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
